test/isabelle/negative-tests/index-out-of-bounds-tuple.p
module Tuple-ioob {

  // tuple positional access, projection
  t2: (int, int) = (1, 2)

  // Projections for t2
  t_21: int = t2(0)
  t_22: int = t2(3)

}